@@ -22,7 +22,7 @@ The JVM is the runtime environment that runs your compiled .class files (bytecod
 |   - Garbage Collector                    |
 | Native Interface (JNI)                   |
 | Native Libraries                         |
-+------------------------------------------+
+
 
 
 # Classloader subsystem
@@ -101,54 +101,56 @@ Metaspace – stores class metadata (replaced PermGen since Java 8).
 | **Shenandoah GC**                      | Similar to ZGC, RedHat version | Ultra-low latency           |
 
 
+# “Heap is shared, stack is not” → WHY
+This is not a rule, it’s a design necessity.
+Multiple threads must:
+- Work independently (local variables, method calls)
+- Share objects (state, data structures)
+
+So the JVM separates execution state from shared data.
+
+### Stack means execution context (thread-local by design)
+
+Each thread has:
+- ITs own call stack
+- own stack frames
+- own local variables
+
+1. Method calls must be isolated
+2. No synchronization needed
+
+### Heap → Shared object memory
+Objects exist to be shared:
+
+1. Reason 1: Objects must be accessible across threads
+2. Reason 2: Object lifetime outlives method calls
 
 
+## Common jvm flags
+
+-Xms<size>	Initial heap size
+-Xmx<size>	Maximum heap size
+-XX:NewRatio=<ratio>	Ratio between young and old generation
+-XX:SurvivorRatio=<ratio>	Size ratio of the survivor spaces to Eden
+-XX:+UseG1GC	Use G1 Garbage Collector
+-XX:+PrintGCDetails	Prints detailed GC logs
+-XX:+HeapDumpOnOutOfMemoryError	Dumps heap when OOM error occurs
 
 
+``` shell
+java -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:InitiatingHeapOccupancyPercent=45 -jar myapp.jar
+```
+
+MaxGCPauseMillis: Target pause time for GC.
+InitiatingHeapOccupancyPercent: Percentage that triggers a GC cycle.
 
 
+### Monitoring with Jvisualvm and Jconsole
+To visualize memory usage:
 
+JVisualVM: Perfect for monitoring heap size, GC activity, and thread states.
+JConsole: Lightweight, great for quick peeks at memory and thread status.
 
+# Practical scenarios
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+## 1. High Latency Spikes
